// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AchievementList > renders 1`] = `
"<!--v-if-->
<div data-v-1c120264="" class="flex-container flex-col">
  <h2 class="label-like">This week's toil</h2>
  <ul data-v-1c120264="" class="achievement-list__badge-container">
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="5 varieties of nuts this week (locked)" data-test-id="badge-goNuts-3" class="badge--goNuts badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🥜</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Go nuts</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="5 different citrus fruits this week (locked)" data-test-id="badge-lemons-3" class="badge--lemons badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🍋</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Lemons</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="5 onion family veggies this week (locked)" data-test-id="badge-tearnado-3" class="badge--tearnado badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🧅</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Tearnado</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="10 red veggies this week (locked)" data-test-id="badge-allOnRed-3" class="badge--allOnRed badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">♥️</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">All on red</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 botanical berries this week (locked)" data-test-id="badge-botanicalBerries-3" class="badge--botanicalBerries badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🍅</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">"Berries"</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="30 veggies and weekly challenge completed (locked)" data-test-id="badge-overachiever-3" class="badge--overachiever badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">💪</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Overachiever</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="3 veggies from each category this week (locked)" data-test-id="badge-rainbow-3" class="badge--rainbow badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🌈</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Rainbow</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="30 unique veggies this week (locked)" data-test-id="badge-thirtyVeggies-3" class="badge--thirtyVeggies badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🎉</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">30 Weekly</div>
    </li>
  </ul>
</div>
<div data-v-1c120264="" class="flex-container flex-col">
  <h2 class="label-like">The Completionist</h2>
  <ul class="achievement-list__badge-container">
    <li data-v-06381b3c="" aria-label="40 unique veggies (locked)" data-test-id="badge-completionist-1" class="badge--completionist badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🐣</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">40 veggies</div>
    </li>
    <li data-v-06381b3c="" aria-label="80 unique veggies (locked)" data-test-id="badge-completionist-2" class="badge--completionist badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🐧</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">80 veggies</div>
    </li>
    <li data-v-06381b3c="" aria-label="150 unique veggies (locked)" data-test-id="badge-completionist-3" class="badge--completionist badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🦅</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">150 veggies</div>
    </li>
  </ul>
</div>
<div data-v-1c120264="" class="flex-container flex-col">
  <h2 class="label-like">Challenge Accepted</h2>
  <ul class="achievement-list__badge-container">
    <li data-v-06381b3c="" aria-label="5 completed weekly challenges (locked)" data-test-id="badge-challengeAccepted-1" class="badge--challengeAccepted badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🚁</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">5 challenges</div>
    </li>
    <li data-v-06381b3c="" aria-label="10 completed weekly challenges (locked)" data-test-id="badge-challengeAccepted-2" class="badge--challengeAccepted badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">✈️</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">10 challenges</div>
    </li>
    <li data-v-06381b3c="" aria-label="20 completed weekly challenges (locked)" data-test-id="badge-challengeAccepted-3" class="badge--challengeAccepted badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🚀</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">20 challenges</div>
    </li>
  </ul>
</div>
<div data-v-1c120264="" class="flex-container flex-col">
  <h2 class="label-like">The Committed</h2>
  <ul class="achievement-list__badge-container">
    <li data-v-06381b3c="" aria-label="3 months of active use (locked)" data-test-id="badge-committed-1" class="badge--committed badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🌱</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">3 months</div>
    </li>
    <li data-v-06381b3c="" aria-label="6 months of active use (locked)" data-test-id="badge-committed-2" class="badge--committed badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🪴</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">6 months</div>
    </li>
    <li data-v-06381b3c="" aria-label="12 months of active use (locked)" data-test-id="badge-committed-3" class="badge--committed badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🎄</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">12 months</div>
    </li>
  </ul>
</div>
<div data-v-1c120264="" class="flex-container flex-col">
  <h2 class="label-like">Hot Streak</h2>
  <ul class="achievement-list__badge-container">
    <li data-v-06381b3c="" aria-label="5 week streak of over 30 veggies (locked)" data-test-id="badge-hotStreak-1" class="badge--hotStreak badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🌶️</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">5 Weeks</div>
    </li>
    <li data-v-06381b3c="" aria-label="10 week streak of over 30 veggies (locked)" data-test-id="badge-hotStreak-2" class="badge--hotStreak badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🔥</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">10 Weeks</div>
    </li>
    <li data-v-06381b3c="" aria-label="20 week streak of over 30 veggies (locked)" data-test-id="badge-hotStreak-3" class="badge--hotStreak badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🌋</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">20 Weeks</div>
    </li>
  </ul>
</div>
<div data-v-1c120264="" class="flex-container flex-col">
  <h2 class="label-like">The Experimenter</h2>
  <ul data-v-1c120264="" class="achievement-list__badge-container">
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 unique fruits and berries (locked)" data-test-id="badge-experimenterFruit-3" class="badge--experimenterFruit badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🍎</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Fruits</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 unique vegetables (locked)" data-test-id="badge-experimenterVegetable-3" class="badge--experimenterVegetable badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🥦</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Vegetables</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 unique leafy greens (locked)" data-test-id="badge-experimenterLeafy-3" class="badge--experimenterLeafy badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🥬</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Leafy Greens</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 unique roots and bulbs (locked)" data-test-id="badge-experimenterRoot-3" class="badge--experimenterRoot badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🥕</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Roots</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 unique beans and legumes (locked)" data-test-id="badge-experimenterBean-3" class="badge--experimenterBean badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🫛</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Beans</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 unique grains, nuts and seeds (locked)" data-test-id="badge-experimenterGrain-3" class="badge--experimenterGrain badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🌾</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Grains</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="10 unique mushrooms (locked)" data-test-id="badge-experimenterMushroom-3" class="badge--experimenterMushroom badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🍄‍🟫</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Mushrooms</div>
    </li>
  </ul>
</div>"
`;

exports[`AchievementList > renders with some badges enabled 1`] = `
"<div data-v-1c120264="" class="flex-container flex-col" data-test-id="thousands-container">
  <h2 class="label-like">A thousand and one veggies</h2>
  <ul data-v-1c120264="" class="achievement-list__badge-container">
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="A thousand veggies logged" data-test-id="thousands-odd-achievement" class="badge--thousandsOdd badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Platinum" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🐐</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">GOAT</div>
    </li>
    <!--v-if-->
  </ul>
</div>
<div data-v-1c120264="" class="flex-container flex-col">
  <h2 class="label-like">This week's toil</h2>
  <ul data-v-1c120264="" class="achievement-list__badge-container">
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="5 varieties of nuts this week " data-test-id="badge-goNuts-3" class="badge--goNuts badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🥜</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Go nuts</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="5 different citrus fruits this week " data-test-id="badge-lemons-3" class="badge--lemons badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🍋</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Lemons</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="5 onion family veggies this week (locked)" data-test-id="badge-tearnado-3" class="badge--tearnado badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🧅</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Tearnado</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="10 red veggies this week " data-test-id="badge-allOnRed-3" class="badge--allOnRed badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">♥️</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">All on red</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 botanical berries this week " data-test-id="badge-botanicalBerries-3" class="badge--botanicalBerries badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🍅</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">"Berries"</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="30 veggies and weekly challenge completed (locked)" data-test-id="badge-overachiever-3" class="badge--overachiever badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">💪</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Overachiever</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="3 veggies from each category this week (locked)" data-test-id="badge-rainbow-3" class="badge--rainbow badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🌈</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Rainbow</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="40 unique veggies this week " data-test-id="badge-thirtyVeggies-4" class="badge--thirtyVeggies badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Platinum" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">💎</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">40 Weekly</div>
    </li>
  </ul>
</div>
<div data-v-1c120264="" class="flex-container flex-col">
  <h2 class="label-like">The Completionist</h2>
  <ul class="achievement-list__badge-container">
    <li data-v-06381b3c="" aria-label="40 unique veggies " data-test-id="badge-completionist-1" class="badge--completionist badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🐣</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">40 veggies</div>
    </li>
    <li data-v-06381b3c="" aria-label="80 unique veggies " data-test-id="badge-completionist-2" class="badge--completionist badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🐧</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">80 veggies</div>
    </li>
    <li data-v-06381b3c="" aria-label="150 unique veggies (locked)" data-test-id="badge-completionist-3" class="badge--completionist badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🦅</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">150 veggies</div>
    </li>
  </ul>
</div>
<div data-v-1c120264="" class="flex-container flex-col">
  <h2 class="label-like">Challenge Accepted</h2>
  <ul class="achievement-list__badge-container">
    <li data-v-06381b3c="" aria-label="5 completed weekly challenges (locked)" data-test-id="badge-challengeAccepted-1" class="badge--challengeAccepted badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🚁</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">5 challenges</div>
    </li>
    <li data-v-06381b3c="" aria-label="10 completed weekly challenges (locked)" data-test-id="badge-challengeAccepted-2" class="badge--challengeAccepted badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">✈️</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">10 challenges</div>
    </li>
    <li data-v-06381b3c="" aria-label="20 completed weekly challenges (locked)" data-test-id="badge-challengeAccepted-3" class="badge--challengeAccepted badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🚀</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">20 challenges</div>
    </li>
  </ul>
</div>
<div data-v-1c120264="" class="flex-container flex-col">
  <h2 class="label-like">The Committed</h2>
  <ul class="achievement-list__badge-container">
    <li data-v-06381b3c="" aria-label="3 months of active use (locked)" data-test-id="badge-committed-1" class="badge--committed badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🌱</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">3 months</div>
    </li>
    <li data-v-06381b3c="" aria-label="6 months of active use (locked)" data-test-id="badge-committed-2" class="badge--committed badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🪴</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">6 months</div>
    </li>
    <li data-v-06381b3c="" aria-label="12 months of active use (locked)" data-test-id="badge-committed-3" class="badge--committed badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🎄</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">12 months</div>
    </li>
  </ul>
</div>
<div data-v-1c120264="" class="flex-container flex-col">
  <h2 class="label-like">Hot Streak</h2>
  <ul class="achievement-list__badge-container">
    <li data-v-06381b3c="" aria-label="5 week streak of over 30 veggies (locked)" data-test-id="badge-hotStreak-1" class="badge--hotStreak badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Bronze" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🌶️</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">5 Weeks</div>
    </li>
    <li data-v-06381b3c="" aria-label="10 week streak of over 30 veggies (locked)" data-test-id="badge-hotStreak-2" class="badge--hotStreak badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Silver" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🔥</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">10 Weeks</div>
    </li>
    <li data-v-06381b3c="" aria-label="20 week streak of over 30 veggies (locked)" data-test-id="badge-hotStreak-3" class="badge--hotStreak badge--locked badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🌋</div>
      </div>
      <div data-v-06381b3c="" class="badge__overlay" style="mask-image: conic-gradient(transparent 0deg 0deg, black 0deg 360deg);"></div>
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">20 Weeks</div>
    </li>
  </ul>
</div>
<div data-v-1c120264="" class="flex-container flex-col">
  <h2 class="label-like">The Experimenter</h2>
  <ul data-v-1c120264="" class="achievement-list__badge-container">
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 unique fruits and berries " data-test-id="badge-experimenterFruit-3" class="badge--experimenterFruit badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🍎</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Fruits</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 unique vegetables " data-test-id="badge-experimenterVegetable-3" class="badge--experimenterVegetable badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🥦</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Vegetables</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 unique leafy greens " data-test-id="badge-experimenterLeafy-3" class="badge--experimenterLeafy badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🥬</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Leafy Greens</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 unique roots and bulbs " data-test-id="badge-experimenterRoot-3" class="badge--experimenterRoot badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🥕</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Roots</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 unique beans and legumes " data-test-id="badge-experimenterBean-3" class="badge--experimenterBean badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🫛</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Beans</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="15 unique grains, nuts and seeds " data-test-id="badge-experimenterGrain-3" class="badge--experimenterGrain badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🌾</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Grains</div>
    </li>
    <li data-v-06381b3c="" data-v-1c120264="" aria-label="10 unique mushrooms " data-test-id="badge-experimenterMushroom-3" class="badge--experimenterMushroom badge" role="img">
      <div data-v-06381b3c="" class="badge__background badge__background--Gold" aria-hidden="true">
        <div data-v-06381b3c="" class="badge__emoji">🍄‍🟫</div>
      </div>
      <!--v-if-->
      <div data-v-06381b3c="" aria-hidden="true" class="badge__text">Mushrooms</div>
    </li>
  </ul>
</div>"
`;
